[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/ren_gui/Screens.gd" type="Script" id=1]
[ext_resource path="res://scenes/ren_gui/Labels/TitleText.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/Ren/nodes/ren_var_label.gd" type="Script" id=3]
[ext_resource path="res://addons/Ren/icons/ren_var_label.svg" type="Texture" id=4]
[ext_resource path="res://scenes/ren_gui/QuickMenuButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ren_gui/SlotBox.gd" type="Script" id=6]
[ext_resource path="res://ubuntu-font-family/Ubuntu-B.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://scenes/ren_gui/Labels/slot.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/ren_gui/History.gd" type="Script" id=9]
[ext_resource path="res://scenes/ren_gui/HistoryItem.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Screens" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Theme", "Visibility" ]
first_dialog = "example"
first_state = "start"

[node name="Panel" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1027.0
margin_bottom = 609.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="MainMenuDecorations" type="Control" parent="." index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="TitleNVersion" type="Control" parent="MainMenuDecorations" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="HBox" type="HBoxContainer" parent="MainMenuDecorations/TitleNVersion" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 867.0
margin_top = 532.0
margin_right = 1008.0
margin_bottom = 589.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Title" parent="MainMenuDecorations/TitleNVersion/HBox" index="0" instance=ExtResource( 2 )]

margin_right = 91.0
margin_bottom = 57.0
rect_clip_content = false

[node name="RenValLabel" type="Label" parent="MainMenuDecorations/TitleNVersion/HBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 95.0
margin_top = 21.0
margin_right = 127.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0.5.0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 3 )
__meta__ = {
"_editor_icon": ExtResource( 4 )
}
var_name = "version"
default = "0.5.0"
type = "str"

[node name="Navigation" type="Panel" parent="." index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 204.0
margin_bottom = 599.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Label" parent="Navigation" index="0" instance=ExtResource( 2 )]

margin_right = 99.0
margin_bottom = 65.0
rect_clip_content = false
align = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Navigation" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 101.0
margin_right = 140.0
margin_bottom = 513.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 0
_sections_unfolded = [ "Mouse", "Size Flags" ]

[node name="Hack" type="Control" parent="Navigation/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Start" parent="Navigation/VBoxContainer" index="1" instance=ExtResource( 5 )]

margin_top = 20.0
margin_right = 140.0
margin_bottom = 52.0
rect_clip_content = false
text = "Start"
align = 0

[node name="Return" parent="Navigation/VBoxContainer" index="2" instance=ExtResource( 5 )]

visible = false
margin_top = 431.0
margin_right = 85.0
margin_bottom = 465.0
rect_clip_content = false
text = "Return"
align = 0

[node name="History" parent="Navigation/VBoxContainer" index="3" instance=ExtResource( 5 )]

visible = false
margin_top = 52.0
margin_right = 140.0
margin_bottom = 84.0
rect_clip_content = false
text = "History"
align = 0

[node name="Continue" parent="Navigation/VBoxContainer" index="4" instance=ExtResource( 5 )]

margin_top = 72.0
margin_right = 140.0
margin_bottom = 104.0
rect_clip_content = false
text = "Continue"
align = 0

[node name="Load" parent="Navigation/VBoxContainer" index="5" instance=ExtResource( 5 )]

margin_top = 124.0
margin_right = 140.0
margin_bottom = 156.0
rect_clip_content = false
text = "Load"
align = 0

[node name="Save" parent="Navigation/VBoxContainer" index="6" instance=ExtResource( 5 )]

visible = false
margin_top = 108.0
margin_right = 140.0
margin_bottom = 142.0
rect_clip_content = false
text = "Save"
align = 0

[node name="Preferences" parent="Navigation/VBoxContainer" index="7" instance=ExtResource( 5 )]

margin_top = 176.0
margin_right = 140.0
margin_bottom = 208.0
rect_clip_content = false
text = "Preferences"
align = 0

[node name="About" parent="Navigation/VBoxContainer" index="8" instance=ExtResource( 5 )]

margin_top = 228.0
margin_right = 140.0
margin_bottom = 260.0
rect_clip_content = false
text = "About"
align = 0

[node name="Help" parent="Navigation/VBoxContainer" index="9" instance=ExtResource( 5 )]

margin_top = 280.0
margin_right = 140.0
margin_bottom = 312.0
rect_clip_content = false
text = "Help"
align = 0

[node name="Quit" parent="Navigation/VBoxContainer" index="10" instance=ExtResource( 5 )]

margin_top = 332.0
margin_right = 140.0
margin_bottom = 364.0
rect_clip_content = false
text = "Quit"
align = 0

[node name="SlotBox" type="VBoxContainer" parent="." index="3"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 257.0
margin_top = 36.0
margin_right = 959.0
margin_bottom = 545.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 6 )

[node name="Title" type="Label" parent="SlotBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 702.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Save/Load"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="GridContainer" type="GridContainer" parent="SlotBox" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 50.0
margin_right = 702.0
margin_bottom = 509.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
_sections_unfolded = [ "Grow Direction", "Rect", "Size Flags" ]

[node name="1" parent="SlotBox/GridContainer" index="0" instance=ExtResource( 8 )]

margin_right = 231.0
margin_bottom = 227.0
rect_clip_content = false

[node name="2" parent="SlotBox/GridContainer" index="1" instance=ExtResource( 8 )]

margin_left = 235.0
margin_right = 466.0
margin_bottom = 227.0
rect_clip_content = false

[node name="3" parent="SlotBox/GridContainer" index="2" instance=ExtResource( 8 )]

margin_left = 470.0
margin_right = 701.0
margin_bottom = 227.0
rect_clip_content = false

[node name="4" parent="SlotBox/GridContainer" index="3" instance=ExtResource( 8 )]

margin_top = 231.0
margin_right = 231.0
margin_bottom = 458.0
rect_clip_content = false

[node name="5" parent="SlotBox/GridContainer" index="4" instance=ExtResource( 8 )]

margin_left = 235.0
margin_top = 231.0
margin_right = 466.0
margin_bottom = 458.0
rect_clip_content = false

[node name="6" parent="SlotBox/GridContainer" index="5" instance=ExtResource( 8 )]

margin_left = 470.0
margin_top = 231.0
margin_right = 701.0
margin_bottom = 458.0
rect_clip_content = false

[node name="HistoryBox" type="VBoxContainer" parent="." index="4"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 257.0
margin_top = 36.0
margin_right = 959.0
margin_bottom = 545.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Title" type="Label" parent="HistoryBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 702.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "History"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="ScrollContainer" type="ScrollContainer" parent="HistoryBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 50.0
margin_right = 702.0
margin_bottom = 509.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
scroll_deadzone = 0
_sections_unfolded = [ "Scroll" ]

[node name="History" type="VBoxContainer" parent="HistoryBox/ScrollContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 702.0
margin_bottom = 459.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
alignment = 0
script = ExtResource( 9 )
_sections_unfolded = [ "Size Flags", "custom_constants" ]
HistoryItemTemplate = ExtResource( 10 )

[connection signal="pressed" from="Navigation/VBoxContainer/Start" to="." method="_on_Start_pressed"]

[connection signal="pressed" from="Navigation/VBoxContainer/Return" to="." method="_on_Return_pressed"]

[connection signal="pressed" from="Navigation/VBoxContainer/History" to="." method="_on_History_pressed"]

[connection signal="pressed" from="Navigation/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]

[connection signal="pressed" from="Navigation/VBoxContainer/Load" to="." method="_on_Load_pressed"]


